<resources>
    <string name="app_name">BLELights</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="update">Update</string>
    <string name="groupid">Group ID</string>
    <string name="alloff">All Off</string>
    <string name="allon100">All On 100%</string>
    <string name="allon50">All On 50%</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
