<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alec.blelights.controllers.LightControlFragment"
    android:rowCount="3"
    android:columnCount="1">


    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_margin="5dp"
        android:id="@+id/red_container"
        android:layout_height="wrap_content">

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/red_seek"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_marginRight="35dp"
            android:layout_alignEnd="@+id/red_image" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/red_image"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="88dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp" />
    </RelativeLayout>
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_below="@id/red_container"
        android:id="@+id/green_container"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/green_seek"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_marginRight="35dp"
            android:layout_alignEnd="@+id/green_image" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/green_image"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="88dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp" />
    </RelativeLayout>
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_margin="5dp"
        android:layout_below="@id/green_container"
        android:id="@+id/blue_container"
        android:layout_height="wrap_content">

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/blue_seek"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_marginRight="35dp"
            android:layout_alignEnd="@+id/blue_image" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/blue_image"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="88dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp" />
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/update"
        android:id="@+id/update_button"
        android:layout_below="@+id/overall_color"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:id="@+id/overall_color"
        android:layout_below="@+id/blue_container"
        android:background="@color/primary"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/group_id_edittext"
        android:hint="@string/groupid"
        android:layout_alignBottom="@+id/update_button"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alloff"
        android:id="@+id/button_alloff"
        android:layout_below="@+id/update_button"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allon50"
        android:id="@+id/button_allon50"
        android:layout_alignTop="@+id/button_alloff"
        android:layout_toEndOf="@+id/button_alloff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allon100"
        android:id="@+id/button_allon100"
        android:layout_below="@+id/update_button"
        android:layout_toEndOf="@+id/button_allon50" />
</RelativeLayout>
